<resources>
    <string name="app_name">FalseR Bank</string>
    <string name="title_activity_main">FalseR Bank</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_cards">Cards</string>
    <string name="title_profile">Profile</string>
    <string name="button_deposit_text">Deposit</string>
    <string name="button_transfer_text">Transfer</string>
    <string name="transactions_header_text">Last transactions</string>
    <string name="create_new_card_text">Create\nnew card</string>
    <string name="title_activity_new_card">Create new card</string>
    <string name="card_system_text">System</string>
    <string name="service_time">Service time</string>
    <string name="cardholder_name">Cardholder name</string>
    <string name="account">Account</string>
    <string name="currency">Currency</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="field_is_required">Field is required</string>
    <string name="value">Value</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_deposit">Deposit</string>
    <string name="send">Send</string>
    <string name="description">Description</string>
</resources>