<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/navigation_accounts">

    <fragment
            android:id="@+id/navigation_accounts"
            android:name="com.falser.bank.ui.accounts.AccountsFragment"
            android:label="@string/title_accounts"
            tools:layout="@layout/fragment_accounts" />

    <fragment
            android:id="@+id/navigation_cards"
            android:name="com.falser.bank.ui.cards.CardsFragment"
            android:label="@string/title_cards"
            tools:layout="@layout/fragment_cards" />

    <fragment
            android:id="@+id/navigation_profile"
            android:name="com.falser.bank.ui.profile.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_profile" />
</navigation>