<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".ui.cards.new_card.NewCardActivity"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/system_field_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:helperText="Pay system"
            android:layout_marginBottom="15dp"
            android:hint="@string/card_system_text">

        <AutoCompleteTextView
                android:id="@+id/system_field"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="none"
                tools:ignore="LabelFor,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/service_time_field_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:helperText="Card expiration date years"
            android:layout_marginBottom="15dp"
            android:hint="@string/service_time">

        <AutoCompleteTextView
                android:id="@+id/service_time_field"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="none"
                tools:text="3"
                tools:ignore="LabelFor,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/cardholder_name_field_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:helperText="You can use your nickname"
            android:layout_marginBottom="15dp"
            android:hint="@string/cardholder_name">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardholder_name_field"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="textCapCharacters" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:id="@+id/account_field_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            app:helperText="Create new account or use existed one"
            android:hint="@string/account">

        <AutoCompleteTextView
                android:id="@+id/account_field"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="none"
                tools:text="new"
                tools:ignore="LabelFor,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:id="@+id/currency_field_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:helperText="Currency of account"
            android:layout_marginBottom="15dp"
            android:hint="@string/currency">

        <AutoCompleteTextView
                android:id="@+id/currency_field"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="none"
                tools:ignore="LabelFor,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="end">

        <Button
                android:id="@+id/cancel_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/cancel" />

        <Button
                android:id="@+id/create_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/create"
                tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>


