<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.cards.CardsFragment"
        android:orientation="vertical"
        android:padding="10dp">

    <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/cards_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_height="150dp"
            android:paddingHorizontal="20dp"
            tools:background="@drawable/outline_border_gray_transparent"
            tools:backgroundTint="#88888888"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:id="@+id/linearLayout">

        <Button
                android:id="@+id/deposit_button"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:text="@string/button_deposit_text"
                android:drawableEnd="@drawable/baseline_arrow_downward_24"
                android:drawableTint="@android:color/holo_green_light"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

        <Button
                android:id="@+id/transfer_button"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/button_transfer_text"
                app:icon="@drawable/baseline_arrow_upward_24"
                app:iconTint="@android:color/holo_red_light"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

    </LinearLayout>

    <TextView
            android:text="@string/transactions_header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textAlignment="center"
            android:id="@+id/textView" />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            tools:listitem="@layout/transaction_item"/>
</LinearLayout>